--- a/app/views/daily-checks/presented-cheques.html
+++ b/app/views/daily-checks/presented-cheques.html
@@ -1,12 +1,12 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "List presented checks report" %}
+{% set pageName = "Presented cheques report" %}
 
 {% block beforeContent %}
 
 {{ govukBackLink({
   text: "Back",
-  href: "./task-list.html?returning=true"
+  href: "./task-list.html"
 }) }}
 
 {% endblock %}
@@ -16,16 +16,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-                {% if data['returning'] == "true" %}
+                {% if data['presentedChequesReturning'] == "true" %}
 
                 {% else %}
-                {% if data['presentedCheques'] == "in-progress" %}
-                    {{ mojAlert({
-                        variant: "success",
-                        dismissible: false,
-                        html: 'Report created'
-                    }) }}
-                {% elseif data['presentedCheques'] == "ready" %}
+                {% if (data['presentedCheques'] == "in-progress" or data['presentedCheques'] == "ready") %}
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
@@ -37,7 +31,7 @@
                 {% endif %}
 
 
-            <span class="govuk-caption-l">Daily checks</span>
+            <span class="govuk-caption-l">{{data['businessUnit']}}</span>
             <h1 class="govuk-heading-l">{{pageName}}</h1>
             
             <div class="govuk-button-group">
@@ -49,7 +43,7 @@
                 {{ govukButton({
                     text: "Create report",
                     classes: "",
-                    href: "./presented-cheques.html?presentedCheques=in-progress"
+                    href: "./presented-cheques.html?presentedCheques=in-progress&presentedChequesCreated=true"
                 }) }}
 
                 
@@ -81,7 +75,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
-                    <td class="govuk-table__cell">List presented cheques</td>
+                    <td class="govuk-table__cell">Presented cheques report</td>
                     <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                     <td class="govuk-table__cell">jane.smith</td>
                     <td class="govuk-table__cell">Ready</td>
@@ -97,7 +91,7 @@
                     text: "Refresh",
                     classes: "govuk-button--secondary govuk-!-margin-bottom-4",
                     href: "./presented-cheques.html?presentedCheques=ready"
-                }) }}
+            }) }}
 
             <div class="moj-scrollable-pane">
                 <table class="govuk-table" data-module="moj-sortable-table">
@@ -113,7 +107,7 @@
                     <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
-                        <td class="govuk-table__cell">List presented cheques</td>
+                        <td class="govuk-table__cell">Presented cheques report</td>
                         <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                         <td class="govuk-table__cell">jane.smith</td>
                         <td class="govuk-table__cell">In progress</td>
@@ -125,7 +119,7 @@
             <h2 class="govuk-heading-m">Today</h2>
             
 
-            <p class="govuk-body">No reports have been created for daily checks.</p>
+            <p class="govuk-body">No presented cheques reports have been created.</p>
             {% endif %}
 
 
