--- a/app/views/daily-checks/unpresented-cheques.html
+++ b/app/views/daily-checks/unpresented-cheques.html
@@ -2,13 +2,13 @@
 
 {% set journeyName = "Daily checks" %}
 {% set headerCaption = data['businessUnit'] %}
-{% set pageName = "List unpresented cheques report" %}
+{% set pageName = "Unpresented cheques report" %}
 
 {% block beforeContent %}
 
 {{ govukBackLink({
   text: "Back",
-  href: "./task-list.html?unpresentedChequesReturn=true"
+  href: "./task-list.html"
 }) }}
 
 {% endblock %}
@@ -20,14 +20,9 @@
 
       {% if data['unpresentedChequesReturn'] == "true" %}
 
-                {% else %}
-                {% if data['unpresentedCheques'] == "in-progress" %}
-                    {{ mojAlert({
-                        variant: "success",
-                        dismissible: false,
-                        html: 'Report created'
-                    }) }}
-                {% elseif data['unpresentedCheques'] == "ready" %}
+      {% else %}
+
+                {% if (data['unpresentedCheques'] == "in-progress" or data['unpresentedCheques'] == "ready") %}
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
@@ -39,7 +34,7 @@
         {% endif %}
 
 
-            <span class="govuk-caption-l">{{journeyName}} – {{headerCaption}}</span>
+            <span class="govuk-caption-l">{{headerCaption}}</span>
             <h1 class="govuk-heading-l">{{pageName}}</h1>
             
             <div class="govuk-button-group">
@@ -51,7 +46,7 @@
                 {{ govukButton({
                     text: "Create report",
                     classes: "",
-                    href: "./unpresented-cheques.html?unpresentedCheques=in-progress"
+                    href: "./unpresented-cheques.html?unpresentedCheques=in-progress&unpresentedChequesCreated=true"
                 }) }}
 
                 
@@ -83,7 +78,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
-                    <td class="govuk-table__cell">List unpresented cheques</td>
+                    <td class="govuk-table__cell">Unpresented cheques report</td>
                     <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                     <td class="govuk-table__cell">jane.smith</td>
                     <td class="govuk-table__cell">Ready</td>
@@ -115,7 +110,7 @@
                     <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
-                        <td class="govuk-table__cell">List unpresented cheques</td>
+                        <td class="govuk-table__cell">Unpresented cheques report</td>
                         <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                         <td class="govuk-table__cell">jane.smith</td>
                         <td class="govuk-table__cell">In progress</td>
@@ -127,7 +122,7 @@
             <h2 class="govuk-heading-m">Today</h2>
             
 
-            <p class="govuk-body">No reports have been created for daily checks.</p>
+            <p class="govuk-body">No unpresented cheques reports have been created.</p>
 
             <!-- {{ govukButton({
                     text: "Refresh",
