--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -20,7 +20,7 @@
           label: {
             text: "Email",
             isPageHeading: false,
-            classes: "govuk-label--body"
+            classes: "govuk-label--s"
           },
           value: "yourname@hmcts.gov.uk"
         }) }}
