--- a/app/views/daily-checks/check-print-number.html
+++ b/app/views/daily-checks/check-print-number.html
@@ -18,14 +18,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
 
-      <span class="govuk-caption-l">{{journeyName}}</span>
+      <span class="govuk-caption-l">{{headerCaption}}</span>
       <h1 class="govuk-heading-l">{{pageName}}</h1>
     
 
       <form class="govuk-form-group" action="print-cheques?chequesPrinted=true" method="post">
 
           <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">Last cheque number</p>
-            <p class="govuk-!-font-size-27 govuk-!-margin-bottom-4">0000002883</p>
+          <p class="govuk-!-font-size-27 govuk-!-margin-bottom-4">0000002883</p>
 
           
 
