--- a/app/views/daily-checks/print-cheques.html
+++ b/app/views/daily-checks/print-cheques.html
@@ -8,7 +8,7 @@
 
 {{ govukBackLink({
   text: "Back",
-  href: "./task-list.html?chequesPrintedReturn=true"
+  href: "./task-list.html?printChequesReturn=true"
 }) }}
 
 {% endblock %}
@@ -18,11 +18,30 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
+        {% if data['printChequesReturn'] == "true" %}
+
+        {% else %}
+
+        {% if data['chequesPrinted'] == "true" %}
+
+        {{ mojAlert({
+            variant: "success",
+            title: "",
+            showTitleAsHeading: false,
+            dismissible: false,
+            html: '7 cheques printed'
+        }) }}
+
+        {% else %}
+
+        {% endif %}
+
+        {% endif %}
         
 
         <form class="govuk-form-group" action="check-print-number" method="post">
 
-            <span class="govuk-caption-l">{{journeyName}} – {{headerCaption}}</span>
+            <span class="govuk-caption-l">{{headerCaption}}</span>
             <h1 class="govuk-heading-l">{{pageName}}</h1>
 
             <nav class="moj-sub-navigation" aria-label="Sub navigation">
@@ -33,7 +52,7 @@
                 </a>
                 </li>
                 <li class="moj-sub-navigation__item">
-                <a class="moj-sub-navigation__link" href="./printed-cheques.html">
+                <a class="moj-sub-navigation__link" href="./print-report.html">
                     Print report
                 </a>
                 </li>
