--- a/app/views/daily-checks/task-list.html
+++ b/app/views/daily-checks/task-list.html
@@ -64,9 +64,12 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./unpresented-cheques.html" aria-describedby="unpresented-cheques-status">
-                    List unpresented cheques
-                    </a>
+                    {% if data['unpresentedChequesCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./unpresented-cheques.html?unpresentedChequesReturn=true" aria-describedby="unpresented-cheques-status">Unpresented cheques report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./unpresented-cheques.html" aria-describedby="unpresented-cheques-status">Unpresented cheques report</a>
+                    {% endif %}
+                    
                 </div>
                 <!-- <div class="govuk-task-list__status" id="unpresented-cheques-status">
                     {{ govukTag({
@@ -77,10 +80,12 @@
                 </li>
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
-                <div class="govuk-task-list__name-and-hint" data-module="edge">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Sorry, we have not designed this part yet" aria-describedby="bacs-file-status">
-                    Create master BACS file
-                    </a>
+                <div class="govuk-task-list__name-and-hint">
+                    {% if data['bacsFileCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bacs-file.html?bacsFileReportReturning=true" aria-describedby="bacs-file-status">BACS file report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bacs-file.html" aria-describedby="bacs-file-status">BACS file report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="bacs-file-status">
                     {{ govukTag({
@@ -92,9 +97,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bank-list.html" aria-describedby="bank-list-status">
-                    Bank list
-                    </a>
+                    {% if data['bankReportCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bank-list.html?bankReportReturning=true" aria-describedby="bank-list-status">Bank report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bank-list.html" aria-describedby="bank-list-status">Bank report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="bank-list-status">
                     {{ govukTag({
@@ -110,9 +117,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./control-totals.html" aria-describedby="control-totals-status">
-                    Control totals
-                    </a>
+                    {% if data['controlTotalsCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./control-totals.html?controlTotalsReturning=true" aria-describedby="control-totals-status">Control totals report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./control-totals.html" aria-describedby="control-totals-status">Control totals report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="control-totals-status">
                     {{ govukTag({
@@ -124,9 +133,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./dishonoured-cheques.html" aria-describedby="dishonoured-cheques-status">
-                    List dishonoured cheques
-                    </a>
+                    {% if data['dishonouredChequeCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./dishonoured-cheques.html?dishonouredChequesReturning=true" aria-describedby="dishonoured-cheques-status">Dishonoured cheques report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./dishonoured-cheques.html" aria-describedby="dishonoured-cheques-status">Dishonoured cheques report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="dishonoured-cheques-status">
                     {{ govukTag({
@@ -138,9 +149,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./witnesses.html" aria-describedby="witnesses-status">
-                    List witnesses
-                    </a>
+                    {% if data['witnessCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./witnesses.html?witnessReturning=true" aria-describedby="witnesses-status">Witness expenses report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./witnesses.html" aria-describedby="witnesses-status">Witness expenses report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="witnesses-status">
                     {{ govukTag({
@@ -152,9 +165,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint" data-module="edge">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Sorry, we have not designed this part yet" aria-describedby="bacs-file-status">
-                    List suspense
-                    </a>
+                    {% if data['suspenseCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./suspense.html?suspenseReturning=true" aria-describedby="suspense-report-status">Suspense report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./suspense.html" aria-describedby="suspense-report-status">Suspense report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="bacs-file-status">
                     {{ govukTag({
@@ -166,9 +181,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                 <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html" aria-describedby="outstanding-payment-status">
-                    List reversed payments
-                    </a>
+                    {% if data['reversedPaymentCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html?reversedPaymentReturning=true" aria-describedby="outstanding-payment-status">Reversed payments report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html" aria-describedby="outstanding-payment-status">Reversed payments report</a>
+                    {% endif %}
                 </div>
                 <!-- <div class="govuk-task-list__status" id="outstanding-payment-status">
                     {{ govukTag({
@@ -199,9 +216,11 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./presented-cheques.html" aria-describedby="presented-cheques-status">
-                        List presented cheques
-                    </a>
+                    {% if data['presentedChequesCreated'] == "true" %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./presented-cheques.html?presentedChequesReturning=true" aria-describedby="presented-cheques-status">Presented cheques report</a>
+                    {% else %}
+                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./presented-cheques.html" aria-describedby="presented-cheques-status">Presented cheques report</a>
+                    {% endif %}
                     </div>
                     <!-- <div class="govuk-task-list__status govuk-hint" id="presented-cheques-status">
                         {{ govukTag({
